services/api-auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-auth
  labels:
    app: api-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-auth
  template:
    metadata:
      labels:
        app: api-auth
    spec:
      containers:
        - name: api-auth
          image: docker.io/solarianetwork/api-auth:latest
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: jwt-keystore
              mountPath: /etc/secrets/jwt
              readOnly: true
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 20
      volumes:
        - name: jwt-keystore
          secret:
            secretName: api-auth-jwt-keystore
