services/api-auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-auth
  labels:
    app: api-auth
spec:
  type: ClusterIP
  selector:
    app: api-auth
  ports:
    - port: 8081
      targetPort: 8081
