services/api-auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-auth
spec:
  ingressClassName: kong
  rules:
    - host: api-auth.34.135.202.187.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-auth
                port:
                  number: 8081
